显示ip和封禁用户修复v2